draw simple particle

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h1 id="title">Particles Canvas Example</h1>
     
     <div id="canvasContainer"></div>
-  
-    <script src="main2.js"></script>
+    
+    <script src="mover.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
